--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "lodash.debounce": "^4.0.8",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "sass": "^1.67.0"
   },
   "devDependencies": {
